<resources>
    <string name="app_name">Music Match</string>
    <string name="settings">Settings</string>
    <string name="pick_songs">Pick Songs</string>
    <string name="find_songs">Find Songs</string>
    <string name="playlist_title">Playlist Title</string>
    <string name="settings_title">Settings</string>
    <string name="sign_up_title">Sign up</string>
    <string name="music_match">Music Match</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="wait_timer">Wait timer:</string>
    <string name="save_settings">Save Settings</string>
    <string name="the_max_amount_of_time_you_want_music_match_to_process_your_songs">The max amount of time you want Music Match to process your songs</string>
    <string name="settings">Settings</string>
    <string name="explicit_music_lyrics">Explicit Music Lyrics</string>
    <string name="long_songs_10_min"><![CDATA[Long Songs (>10 min)]]></string>
    <string-array name="sample_list">
        <item>Morphing Button - Icon</item>
        <item>Morphing Button - Icon &amp; Text</item>
        <item>Linear Progress Button - Determinate</item>
        <item>Linear Progress Button - Indeterminate</item>
    </string-array>
</resources>
